<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login.activitySignIn">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:foregroundGravity="center"
        android:src="@mipmap/ic_launcher" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TenTaiKhoan"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:endIconMode="clear_text"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_TenTaiKhoan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="20sp"
            android:autoSizeStepGranularity="20sp"
            android:drawableStart="@drawable/gmail"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            app:autoSizeTextType="uniform" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/MatKhau"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:boxBackgroundMode="outline"
        app:endIconMode="password_toggle"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_MatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="20sp"
            android:autoSizeStepGranularity="20sp"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp"
            app:autoSizeTextType="uniform" />

        <CheckBox
            android:id="@+id/chbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:buttonTint="#666666"
            android:gravity=""
            android:text="Remember me"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_DangNhap"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button"
        android:text="@string/ng_nh_p"
        android:textSize="15sp"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/layout_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch_a_c_t_i_kho_n"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/ng_k"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="30sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_QuenMatKhau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qu_n_m_t_kh_u"
        android:textAllCaps="false"
        android:textSize="20sp" />
</LinearLayout>