<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".UserProfile.ActivityUpdatePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="15sp"
            android:autoSizeStepGranularity="15sp"
            android:text="@string/update_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oldpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:errorEnabled="false"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/oldpasslog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeStepGranularity="20sp"
                android:drawableStart="@drawable/password"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                app:autoSizeTextType="uniform" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newpasslog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeStepGranularity="20sp"
                android:drawableStart="@drawable/password"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                app:autoSizeTextType="uniform" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/verifynewpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/verifynewpasslog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeStepGranularity="20sp"
                android:drawableStart="@drawable/password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                app:autoSizeTextType="uniform" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_Back"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeStepGranularity="15sp"
                android:text="@string/back"
                android:textSize="15sp"
                app:autoSizeTextType="uniform" />

            <Button
                android:id="@+id/btn_Update"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeStepGranularity="15sp"
                android:text="@string/update_password"
                android:textAlignment="center"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
